# cli

./: .gitignore  LICENSE  README.md  TODO  dependencies.txt  list_imports.py  list_vtk.py  orion.spec  orion_arm.spec  orion_cli.spec  orion_intel.spec  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-release.yml  build-wheel.yml  build.yml  build_release.yml  test.yml
examples/: assembly.ipynb
hooks/: hook-orion_cli.py
orion_cli/: __main__.py  cli.py
orion_cli/helpers/: __init__.py  archive_helper.py  asset_helper.py  cad_helper.py  config_helper.py  file_helper.py  git_helper.py  numpy_helper.py  remote_helper.py  version_helper.py
orion_cli/models/: archive.py  assembly.py
orion_cli/readers/: step_reader.py
orion_cli/services/: __init__.py  archive_service.py  base_service.py  cad_service.py  cli_service.py  config_service.py  create_service.py  deploy_service.py  diff_service.py  display_service.py  log_service.py  project_service.py  revision_service.py  sync_service.py  version_service.py
orion_cli/templates/: README_template.py  gitignore_template  gitignore_template.py
orion_cli/utils/: logging.py  numpy.py  ordered_set.py
tests/: conftest.py  test_create_command.py  test_orion_cli.py  test_revision_command.py
