[tool.poetry]
name = "orion-cli"
version = "0.1.0"
description = "Command-line tool for Open Orion PLM"
authors = ["Christian <christian@openorion.org>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.0"
requests = "^2.32.3"
pygithub = "^2.3.0"
numpy = "<2.0.0"
cadquery = [
    {version = "^2.4.0", markers = "platform_machine == 'x86_64'"},
]
cadquery-arm-test = [
    {version = "*", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
]
pydantic = "^2.8.2"
ocp-tessellate = "^2.3.3"
scipy = "^1.14.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-click = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
orion = "orion_cli.cli:cli"



