[tool.poetry]
name = "orion-cli"
version = "0.1.1"
description = "Command-line tool for Open Orion PLM"
authors = ["Afshawn Lotfi <afshawn@openorion.org>", "Christian <christian@openorion.org>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.0"
requests = "^2.32.3"
pygithub = "^2.3.0"
numpy = "<2.0.0"
cadquery = [
    {version = "^2.4.0", markers = "platform_machine != 'arm64'"},
]
cadquery-arm = [
    {version = "*", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
]
pydantic = "^2.8.2"
scipy = "^1.14.0"
lxml-html-clean = "^0.1.1"
pandas = "^2.2.2"
tabulate = "^0.9.0"

pyyaml = "^6.0.1"
jupyter-cadquery-orion = "^0.0.1"
ocp-tessellate-orion = "^0.0.1"
[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-click = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
orion = "orion_cli.cli:cli"



